--- a/Hotel Management/attr.css
+++ b/Hotel Management/attr.css
@@ -26,7 +26,7 @@ body, html{
 }
 
 .pimg1{
-	background-image: url('images/map.png');
+	background-image: url('images/nigeriamap.png');
 	min-height: 100%;
 }
 
